tdf#130122 Make content navigation view collapse uniform

...for root node of all content types

This patch makes content navigation view root collapse to it's immediate
child entries. This fixes the current behavior of outline root collapse
not collapsing and all other content types collapsing to root.

Change-Id: If48b4c9f5f92e7a1843557eec51c516fa42f228f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/87316
Tested-by: Jenkins
Reviewed-by: Jim Raykowski <raykowj@gmail.com>